fix(Navbar): change logo class, feat(Scroll): modify scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,19 @@ h2 {
 h3 {
   font-size: 30px;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
